# locksmith

./: .env.example  .gitignore  .readthedocs.yaml  CLAUDE.md  README.md  TODO.md  entitlements.plist  pyproject.toml  resources.qrc  signLibs.sh
.github/workflows/: release.ci.yml
docs/: api-reference.rst  conf.py  credential-pages.rst  credential-workflows.rst  developer-guide.rst  group-workflows.rst  identifier-pages.rst  index.rst  kerifoundation-plugin.rst  plugin-authoring.rst  remote-workflows.rst  requirements.txt  vault-navigation.rst
libsodium/: libsodium.23.arm.dylib  libsodium.23.i386.dylib  libsodium.26.x86_64.dylib  libsodium.dylib
schema/: vlei_schema_oobis.md
scripts/: core.cesr  env.sh  generate_qrc.py  lots_of_identifiers.sh  sign.sh  upload.py
scripts/data/: controller.json
src/locksmith/: main.py  version.py
src/locksmith/core/: adjudication.py  apping.py  challenging.py  configing.py  credentialing.py  crypto.py  formatting.py  grouping.py  habbing.py  indirecting.py  ipexing.py  otping.py  receipting.py  remoting.py  rotating.py  signals.py  tasking.py  testing.py  turretting.py  vaulting.py  witnessing.py
src/locksmith/db/: basing.py
src/locksmith/plugins/: __init__.py  base.py  manager.py
src/locksmith/ui/: colors.py  (+5 more)
tests/: conftest.py  test_apping_vault_delete.py  test_core_remoting.py  test_delete_vault_dialog.py  test_kerifoundation_account_gating.py  test_kerifoundation_onboarding_service.py  test_kerifoundation_onboarding_ui.py  test_kerifoundation_vault_deletion.py  test_kerifoundation_witnesses.py  test_plugin_manager.py
(+99 files in other folders)
